[package]
name = "flux"
version = "0.1.0"
edition = "2024"

[dependencies]
rss = "2.0.12"
reqwest = {version = "0.13.2", features = ["json"]}
axum = "0.8.8"
tokio = {version = "1.50.0", features = ["full"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
feed-rs = "2.3.1"
chrono = "0.4.44"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
anyhow = "1.0.102"
